turtleart.flower.Flower.scala.error
Erreur de compilation :
Flower:22: error: '<-' expected but integer literal found.
  for (i 1 to 8){
         ^Flower:25: error: illegal start of simple expression
} 
^